--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <h1>HELEN CAROLINE DARSANAPU</h1>
-    <h3>Vit branch</h3>
-    <h3>2:30 - 4:30</h3>
+    <h2>Vit AP</h2>
+    <h2>2:30 - 4:30</h2>
 
     <h5><u>HTML tasks</u></h5>
     <table>
